@@ -17,6 +17,7 @@ Build-Depends: dctrl-tools,
                python-apt (>= 0.7.93~),
                python-debian (>= 0.1.20~),
                python-distro-info (>= 0.4~),
+               python-httplib2,
                python-launchpadlib (>= 1.5.7),
                python-mox,
                python-setuptools,
@@ -38,6 +39,7 @@ Depends: binutils,
          python-apt (>= 0.7.93~),
          python-debian (>= 0.1.20~),
          python-distro-info (>= 0.4~),
+         python-httplib2,
          python-launchpadlib (>= 1.5.7),
          python-lazr.restfulclient,
          sudo,
