@@ -20,10 +20,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 import sys
-import urllib2
 import json
 
+from httplib2 import Http, HttpLib2Error
+
 import ubuntutools.misc
+
 
 def main():
     ubuntutools.misc.require_utf8()
@@ -36,8 +38,19 @@ def main():
                       'restricted', 'restricted-manual',
                       'universe', 'universe-manual',
                       'multiverse', 'multiverse-manual'):
-        page = urllib2.urlopen('http://merges.ubuntu.com/%s.json' % component)
-        for merge in json.load(page):
+
+        url = 'https://merges.ubuntu.com/%s.json' % component
+        try:
+            headers, page = Http().request(url)
+        except HttpLib2Error, e:
+            print >> sys.stderr, str(e)
+            sys.exit(1)
+        if headers.status != 200:
+            print >> sys.stderr, "%s: %s %s" % (url, headers.status,
+                                                headers.reason)
+            sys.exit(1)
+
+        for merge in json.loads(page):
             package = merge['source_package']
             author, uploader = '', ''
             if 'user' in merge:
