@@ -2,6 +2,8 @@ ubuntu-dev-tools (0.136ubuntu1) UNRELEASED; urgency=low
 
   * mk-sbuild: Make --eatmydata command line flag actually work.
   * Remove dgetlp. No longer needed.
+  * Use httplib2 everywhere that we do https. The python stdlib doesn't do
+    certificate verification.
 
  -- Stefano Rivera <stefanor@debian.org>  Mon, 21 Nov 2011 09:47:00 +0200
 
